/**
 * MQTT åè®®é€‚é…å™¨ - ç”Ÿäº§çº§å®ç°
 * 
 * åŸºäº mqtt.js (v5) å®¢æˆ·ç«¯åº“
 * æ”¯æŒ MQTT 3.1.1 / 5.0 åè®®ï¼ŒTLS/SSL åŠ å¯†ï¼ŒQoS 0/1/2
 * é«˜çº§ç‰¹æ€§ï¼šLWT (é—å˜±æ¶ˆæ¯)ã€æ¶ˆæ¯ä¿ç•™ã€ä¸»é¢˜åˆ«åã€ä¼šè¯è¿‡æœŸ
 * èµ„æºå‘ç°ï¼šé€šè¿‡ $SYS ä¸»é¢˜å’Œé€šé…ç¬¦è®¢é˜…å‘ç°æ´»è·ƒ Topic
 */

import mqtt from 'mqtt';
import { BaseAdapter, AdapterError, AdapterErrorCode, normalizeError } from './base';
import type { ConnectionTestResult, DiscoveredEndpoint, ProtocolConfigSchema, HealthCheckResult } from '../../../shared/accessLayerTypes';

export class MqttAdapter extends BaseAdapter {
  readonly protocolType = 'mqtt' as const;
  protected defaultTimeoutMs = 15000;

  readonly configSchema: ProtocolConfigSchema = {
    protocolType: 'mqtt',
    label: 'MQTT Broker',
    icon: 'ğŸ“¡',
    description: 'MQTT/Sparkplug B â€” IoT ä¼ æ„Ÿå™¨å®æ—¶æ•°æ®æµä¸å·¥ä¸šæ¶ˆæ¯',
    category: 'industrial',
    connectionFields: [
      { key: 'host', label: 'ä¸»æœºåœ°å€', type: 'string', required: true, placeholder: '192.168.1.100', description: 'MQTT Broker ä¸»æœºåæˆ– IP' },
      { key: 'port', label: 'ç«¯å£', type: 'number', required: true, defaultValue: 1883, description: 'é»˜è®¤ 1883 (TCP), 8883 (TLS), 8083 (WebSocket)' },
      { key: 'protocol', label: 'ä¼ è¾“åè®®', type: 'select', required: true, defaultValue: 'mqtt', options: [
        { label: 'MQTT (TCP)', value: 'mqtt' },
        { label: 'MQTTS (TLS)', value: 'mqtts' },
        { label: 'WS (WebSocket)', value: 'ws' },
        { label: 'WSS (WebSocket + TLS)', value: 'wss' },
      ]},
      { key: 'mqttVersion', label: 'MQTT ç‰ˆæœ¬', type: 'select', required: false, defaultValue: '4', options: [
        { label: 'MQTT 3.1.1 (v4)', value: '4' },
        { label: 'MQTT 5.0 (v5)', value: '5' },
      ]},
      { key: 'clientId', label: 'å®¢æˆ·ç«¯ ID', type: 'string', required: false, placeholder: 'ç•™ç©ºè‡ªåŠ¨ç”Ÿæˆ', description: 'å”¯ä¸€æ ‡è¯†æ­¤è¿æ¥çš„å®¢æˆ·ç«¯ IDï¼Œé›†ç¾¤éƒ¨ç½²éœ€ç¡®ä¿å”¯ä¸€' },
      { key: 'keepalive', label: 'å¿ƒè·³é—´éš”(ç§’)', type: 'number', required: false, defaultValue: 60, description: 'PINGREQ å‘é€é—´éš”ï¼Œ0 è¡¨ç¤ºç¦ç”¨å¿ƒè·³' },
      { key: 'cleanSession', label: 'æ¸…é™¤ä¼šè¯', type: 'boolean', required: false, defaultValue: true, description: 'true=æ¯æ¬¡è¿æ¥åˆ›å»ºæ–°ä¼šè¯; false=æ¢å¤æŒä¹…ä¼šè¯' },
    ],
    authFields: [
      { key: 'username', label: 'ç”¨æˆ·å', type: 'string', required: false },
      { key: 'password', label: 'å¯†ç ', type: 'password', required: false },
      { key: 'caCert', label: 'CA è¯ä¹¦ (PEM)', type: 'textarea', required: false, description: 'TLS æ¨¡å¼ä¸‹çš„ CA æ ¹è¯ä¹¦', group: 'TLS' },
      { key: 'clientCert', label: 'å®¢æˆ·ç«¯è¯ä¹¦ (PEM)', type: 'textarea', required: false, group: 'TLS' },
      { key: 'clientKey', label: 'å®¢æˆ·ç«¯ç§é’¥ (PEM)', type: 'textarea', required: false, group: 'TLS' },
      { key: 'rejectUnauthorized', label: 'éªŒè¯æœåŠ¡å™¨è¯ä¹¦', type: 'boolean', required: false, defaultValue: true, group: 'TLS' },
    ],
    advancedFields: [
      // è¿æ¥æ§åˆ¶
      { key: 'connectTimeout', label: 'è¿æ¥è¶…æ—¶(ms)', type: 'number', required: false, defaultValue: 10000 },
      { key: 'reconnectPeriod', label: 'é‡è¿é—´éš”(ms)', type: 'number', required: false, defaultValue: 5000, description: '0 è¡¨ç¤ºç¦ç”¨è‡ªåŠ¨é‡è¿' },
      { key: 'qos', label: 'é»˜è®¤ QoS', type: 'select', required: false, defaultValue: '1', options: [
        { label: 'QoS 0 (æœ€å¤šä¸€æ¬¡)', value: '0' },
        { label: 'QoS 1 (è‡³å°‘ä¸€æ¬¡)', value: '1' },
        { label: 'QoS 2 (æ°å¥½ä¸€æ¬¡)', value: '2' },
      ]},
      // MQTT 5.0 ç‰¹æ€§
      { key: 'sessionExpiryInterval', label: 'ä¼šè¯è¿‡æœŸ(ç§’)', type: 'number', required: false, description: 'MQTT 5.0: ä¼šè¯è¿‡æœŸé—´éš”ï¼Œ0=è¿æ¥æ–­å¼€æ—¶ç«‹å³è¿‡æœŸ' },
      { key: 'receiveMaximum', label: 'æ¥æ”¶æœ€å¤§å€¼', type: 'number', required: false, defaultValue: 65535, description: 'MQTT 5.0: å®¢æˆ·ç«¯åŒæ—¶å¤„ç†çš„æœ€å¤§ QoS 1/2 æ¶ˆæ¯æ•°' },
      { key: 'topicAliasMaximum', label: 'ä¸»é¢˜åˆ«åæœ€å¤§å€¼', type: 'number', required: false, defaultValue: 0, description: 'MQTT 5.0: ä¸»é¢˜åˆ«åæ•°é‡ä¸Šé™ï¼ˆå‡å°‘å¸¦å®½ï¼‰' },
      { key: 'maximumPacketSize', label: 'æœ€å¤§åŒ…å¤§å°(å­—èŠ‚)', type: 'number', required: false, description: 'MQTT 5.0: å®¢æˆ·ç«¯æ„¿æ„æ¥å—çš„æœ€å¤§åŒ…å¤§å°' },
      // LWT é—å˜±æ¶ˆæ¯
      { key: 'lwtTopic', label: 'LWT ä¸»é¢˜', type: 'string', required: false, placeholder: 'devices/xilian/status', description: 'é—å˜±æ¶ˆæ¯ä¸»é¢˜ï¼ˆå®¢æˆ·ç«¯å¼‚å¸¸æ–­å¼€æ—¶å‘å¸ƒï¼‰', group: 'LWT' },
      { key: 'lwtPayload', label: 'LWT æ¶ˆæ¯ä½“', type: 'string', required: false, placeholder: '{"status":"offline"}', group: 'LWT' },
      { key: 'lwtQos', label: 'LWT QoS', type: 'select', required: false, defaultValue: '1', options: [
        { label: 'QoS 0', value: '0' }, { label: 'QoS 1', value: '1' }, { label: 'QoS 2', value: '2' },
      ], group: 'LWT' },
      { key: 'lwtRetain', label: 'LWT ä¿ç•™', type: 'boolean', required: false, defaultValue: true, group: 'LWT' },
      // â”€â”€â”€ Sparkplug Bï¼ˆå·¥ä¸š IoT æ ‡å‡†ï¼‰â”€â”€â”€
      { key: 'sparkplugEnabled', label: 'å¯ç”¨ Sparkplug B', type: 'boolean', required: false, defaultValue: false,
        description: 'å¯ç”¨ Sparkplug B åè®®ï¼ˆEclipse Tahu æ ‡å‡†ï¼‰ï¼Œè‡ªåŠ¨å¤„ç† NBIRTH/NDEATH/DBIRTH/DDEATH/NDATA/DDATA æ¶ˆæ¯',
        group: 'Sparkplug B' },
      { key: 'sparkplugGroupId', label: 'Group ID', type: 'string', required: false,
        placeholder: 'Factory-01',
        description: 'Sparkplug B ç»„æ ‡è¯†ï¼ˆé€šå¸¸å¯¹åº”å·¥å‚/åŒºåŸŸï¼‰',
        group: 'Sparkplug B' },
      { key: 'sparkplugNodeId', label: 'Edge Node ID', type: 'string', required: false,
        placeholder: 'Gateway-01',
        description: 'Sparkplug B è¾¹ç¼˜èŠ‚ç‚¹æ ‡è¯†ï¼ˆé€šå¸¸å¯¹åº”ç½‘å…³/è¾¹ç¼˜è®¾å¤‡ï¼‰',
        group: 'Sparkplug B' },
      { key: 'sparkplugDeviceIds', label: 'Device ID åˆ—è¡¨', type: 'json', required: false,
        description: 'Sparkplug B è®¾å¤‡ ID åˆ—è¡¨ã€‚ç¤ºä¾‹: ["Pump-01", "Motor-02", "Valve-03"]',
        group: 'Sparkplug B' },
      { key: 'sparkplugUseCompression', label: 'å¯ç”¨å‹ç¼©', type: 'boolean', required: false, defaultValue: false,
        description: 'Sparkplug B Payload ä½¿ç”¨ DEFLATE å‹ç¼©ï¼ˆå‡å°‘å¸¦å®½ï¼Œå¢åŠ  CPU å¼€é”€ï¼‰',
        group: 'Sparkplug B' },
      // â”€â”€â”€ ä¸»é¢˜æ¨¡æ¿ â”€â”€â”€
      { key: 'topicPrefix', label: 'ä¸»é¢˜å‰ç¼€', type: 'string', required: false,
        placeholder: 'factory/line1/devices',
        description: 'å‘å¸ƒ/è®¢é˜…çš„ä¸»é¢˜å‰ç¼€ï¼ˆä¸å«å°¾éƒ¨ /ï¼‰',
        group: 'ä¸»é¢˜é…ç½®' },
      { key: 'subscribeTopics', label: 'è®¢é˜…ä¸»é¢˜åˆ—è¡¨', type: 'json', required: false,
        description: 'éœ€è¦è®¢é˜…çš„ä¸»é¢˜åˆ—è¡¨ï¼ˆæ”¯æŒé€šé…ç¬¦ +/#ï¼‰ã€‚ç¤ºä¾‹: ["sensors/+/temperature", "alarms/#"]',
        group: 'ä¸»é¢˜é…ç½®' },
      { key: 'publishTopic', label: 'å‘å¸ƒä¸»é¢˜', type: 'string', required: false,
        placeholder: 'commands/{deviceId}/set',
        description: 'ä¸‹è¡ŒæŒ‡ä»¤çš„å‘å¸ƒä¸»é¢˜æ¨¡æ¿ï¼ˆ{deviceId} ä¼šè¢«æ›¿æ¢ä¸ºå®é™…è®¾å¤‡ IDï¼‰',
        group: 'ä¸»é¢˜é…ç½®' },
      // â”€â”€â”€ æ¶ˆæ¯æ ¼å¼ â”€â”€â”€
      { key: 'payloadFormat', label: 'æ¶ˆæ¯æ ¼å¼', type: 'select', required: false, defaultValue: 'json', options: [
        { label: 'JSON', value: 'json' },
        { label: 'Protobuf (Sparkplug B)', value: 'protobuf' },
        { label: 'MessagePack', value: 'msgpack' },
        { label: 'CSV', value: 'csv' },
        { label: 'åŸå§‹äºŒè¿›åˆ¶', value: 'binary' },
      ], description: 'æ¶ˆæ¯è´Ÿè½½çš„åºåˆ—åŒ–æ ¼å¼',
        group: 'æ¶ˆæ¯æ ¼å¼' },
      { key: 'timestampField', label: 'æ—¶é—´æˆ³å­—æ®µå', type: 'string', required: false,
        defaultValue: 'timestamp',
        description: 'JSON æ¶ˆæ¯ä¸­çš„æ—¶é—´æˆ³å­—æ®µåï¼ˆç”¨äºæ•°æ®å¯¹é½å’Œæ’åºï¼‰',
        group: 'æ¶ˆæ¯æ ¼å¼' },
      { key: 'timestampFormat', label: 'æ—¶é—´æˆ³æ ¼å¼', type: 'select', required: false, defaultValue: 'epoch_ms', options: [
        { label: 'Unix æ¯«ç§’ (epoch_ms)', value: 'epoch_ms' },
        { label: 'Unix ç§’ (epoch_s)', value: 'epoch_s' },
        { label: 'ISO 8601', value: 'iso8601' },
      ], group: 'æ¶ˆæ¯æ ¼å¼' },
      // â”€â”€â”€ æ€§èƒ½è°ƒä¼˜ â”€â”€â”€
      { key: 'reschedulePings', label: 'é‡è°ƒåº¦å¿ƒè·³', type: 'boolean', required: false, defaultValue: true,
        description: 'æ”¶åˆ°æ¶ˆæ¯åé‡ç½®å¿ƒè·³è®¡æ—¶å™¨',
        group: 'æ€§èƒ½è°ƒä¼˜' },
      { key: 'queueQoSZero', label: 'ç¼“å­˜ QoS 0', type: 'boolean', required: false, defaultValue: true,
        description: 'ç¦»çº¿æ—¶æ˜¯å¦ç¼“å­˜ QoS 0 æ¶ˆæ¯',
        group: 'æ€§èƒ½è°ƒä¼˜' },
      { key: 'incomingStore', label: 'æ¶ˆæ¯ç¼“å­˜å¤§å°', type: 'number', required: false, defaultValue: 1000,
        description: 'å…¥ç«™æ¶ˆæ¯ç¼“å­˜é˜Ÿåˆ—å¤§å°ï¼ˆQoS 1/2 æ¶ˆæ¯ï¼‰',
        group: 'æ€§èƒ½è°ƒä¼˜' },
    ],
  };

  private buildMqttOptions(params: Record<string, unknown>, auth?: Record<string, unknown>): any {
    const protocol = (params.protocol as string) || 'mqtt';
    const host = params.host as string;
    const port = (params.port as number) || 1883;
    const mqttVersion = params.mqttVersion === '5' ? 5 : 4;

    const options: Record<string, any> = {
      protocol: protocol,
      hostname: host,
      port,
      clientId: (params.clientId as string) || `xilian_${Date.now()}_${Math.random().toString(36).slice(2, 8)}`,
      keepalive: (params.keepalive as number) ?? 60,
      clean: params.cleanSession !== false,
      connectTimeout: (params.connectTimeout as number) || 10000,
      reconnectPeriod: 0, // æµ‹è¯•è¿æ¥æ—¶ä¸è‡ªåŠ¨é‡è¿
      protocolVersion: mqttVersion,
      reschedulePings: params.reschedulePings !== false,
      queueQoSZero: params.queueQoSZero !== false,
    };

    // MQTT 5.0 å±æ€§
    if (mqttVersion === 5) {
      options.properties = {};
      if (params.sessionExpiryInterval !== undefined) {
        options.properties.sessionExpiryInterval = params.sessionExpiryInterval as number;
      }
      if (params.receiveMaximum !== undefined) {
        options.properties.receiveMaximum = params.receiveMaximum as number;
      }
      if (params.topicAliasMaximum !== undefined) {
        options.properties.topicAliasMaximum = params.topicAliasMaximum as number;
      }
      if (params.maximumPacketSize !== undefined) {
        options.properties.maximumPacketSize = params.maximumPacketSize as number;
      }
    }

    // LWT é—å˜±æ¶ˆæ¯
    if (params.lwtTopic) {
      options.will = {
        topic: params.lwtTopic as string,
        payload: Buffer.from((params.lwtPayload as string) || '{"status":"offline"}'),
        qos: parseInt((params.lwtQos as string) || '1') as 0 | 1 | 2,
        retain: params.lwtRetain !== false,
      };
    }

    // è®¤è¯
    if (auth?.username) options.username = auth.username as string;
    if (auth?.password) options.password = auth.password as string;

    // TLS é…ç½®
    if (protocol === 'mqtts' || protocol === 'wss') {
      options.rejectUnauthorized = auth?.rejectUnauthorized !== false;
      if (auth?.caCert) options.ca = auth.caCert as string;
      if (auth?.clientCert) options.cert = auth.clientCert as string;
      if (auth?.clientKey) options.key = auth.clientKey as string;
    }

    return options;
  }

  protected async doTestConnection(
    params: Record<string, unknown>,
    auth?: Record<string, unknown>
  ): Promise<ConnectionTestResult> {
    const options = this.buildMqttOptions(params, auth);
    const url = `${options.protocol}://${options.hostname}:${options.port}`;

    return new Promise<ConnectionTestResult>((resolve) => {
      const client = mqtt.connect(url, options);
      const timeout = setTimeout(() => {
        client.end(true);
        resolve({
          success: false,
          latencyMs: 0,
          message: `è¿æ¥è¶…æ—¶: ${url}`,
        });
      }, Math.min((params.connectTimeout as number) || 10000, 8000));

      client.on('connect', () => {
        clearTimeout(timeout);
        const connack = (client as any).connackPacket || {};
        const details: Record<string, unknown> = {
          sessionPresent: connack?.sessionPresent,
          protocolVersion: options.protocolVersion,
          clientId: options.clientId,
          transport: options.protocol,
          keepalive: options.keepalive,
          cleanSession: options.clean,
        };

        // MQTT 5.0 CONNACK å±æ€§
        if (options.protocolVersion === 5 && (connack as any).properties) {
          const props = (connack as any).properties;
          details.serverKeepAlive = props.serverKeepAlive;
          details.assignedClientIdentifier = props.assignedClientIdentifier;
          details.maximumQoS = props.maximumQoS;
          details.retainAvailable = props.retainAvailable;
          details.wildcardSubscriptionAvailable = props.wildcardSubscriptionAvailable;
          details.sharedSubscriptionAvailable = props.sharedSubscriptionAvailable;
          details.topicAliasMaximum = props.topicAliasMaximum;
          details.serverReference = props.serverReference;
        }

        // LWT é…ç½®ç¡®è®¤
        if (options.will) {
          details.lwtConfigured = true;
          details.lwtTopic = options.will.topic;
        }

        client.end(true);
        resolve({
          success: true,
          latencyMs: 0,
          message: `æˆåŠŸè¿æ¥åˆ° MQTT Broker ${url}`,
          serverVersion: `MQTT v${options.protocolVersion === 5 ? '5.0' : '3.1.1'}`,
          details,
        });
      });

      client.on('error', (err) => {
        clearTimeout(timeout);
        client.end(true);
        resolve({
          success: false,
          latencyMs: 0,
          message: `è¿æ¥å¤±è´¥: ${err.message}`,
          details: { error: err.message },
        });
      });
    });
  }

  protected async doDiscoverResources(
    params: Record<string, unknown>,
    auth?: Record<string, unknown>
  ): Promise<DiscoveredEndpoint[]> {
    const options = this.buildMqttOptions(params, auth);
    const url = `${options.protocol}://${options.hostname}:${options.port}`;
    const discoveredTopics = new Map<string, { messageCount: number; lastPayload: string; firstSeen: number }>();

    return new Promise<DiscoveredEndpoint[]>((resolve, reject) => {
      const client = mqtt.connect(url, { ...options, reconnectPeriod: 0 });
      const listenDuration = 5000; // ç›‘å¬ 5 ç§’

      const timeout = setTimeout(() => {
        client.end(true);
        reject(new AdapterError(AdapterErrorCode.TIMEOUT, 'mqtt', 'èµ„æºå‘ç°è¿æ¥è¶…æ—¶'));
      }, 15000);

      client.on('connect', () => {
        // è®¢é˜… $SYS ä¸»é¢˜è·å– broker ä¿¡æ¯ + é€šé…ç¬¦å‘ç°ä¸šåŠ¡ Topic
        (client as any).subscribe(['$SYS/#', '#'], { qos: 0 }, (err: any) => {
          if (err) {
            clearTimeout(timeout);
            client.end(true);
            reject(normalizeError(err, 'mqtt'));
            return;
          }

          // ç›‘å¬ä¸€æ®µæ—¶é—´æ”¶é›†æ´»è·ƒ Topic
          setTimeout(() => {
            clearTimeout(timeout);
            client.end(true);

            const endpoints: DiscoveredEndpoint[] = [];
            const sysTopics: DiscoveredEndpoint[] = [];

            for (const [topic, info] of Array.from(discoveredTopics.entries())) {
              if (!topic.startsWith('$SYS')) {
                // å°è¯•æ£€æµ‹æ•°æ®æ ¼å¼
                let dataFormat: 'json' | 'csv' | 'binary' = 'json';
                try {
                  JSON.parse(info.lastPayload);
                } catch {
                  if (info.lastPayload.includes(',') && info.lastPayload.includes('\n')) {
                    dataFormat = 'csv';
                  } else {
                    dataFormat = 'binary';
                  }
                }

                endpoints.push({
                  resourcePath: topic,
                  resourceType: 'topic',
                  name: topic.split('/').pop() || topic,
                  dataFormat,
                  metadata: {
                    messageCount: info.messageCount,
                    samplePayload: info.lastPayload.slice(0, 500),
                    messageRate: info.messageCount / (listenDuration / 1000),
                  },
                });
              } else {
                sysTopics.push({
                  resourcePath: topic,
                  resourceType: 'topic',
                  name: topic.replace('$SYS/', ''),
                  metadata: { systemTopic: true, value: info.lastPayload.slice(0, 200) },
                });
              }
            }

            // å¦‚æœæ²¡æœ‰å‘ç°ä¸šåŠ¡ Topicï¼Œè¿”å› $SYS ä¿¡æ¯
            resolve(endpoints.length > 0 ? endpoints : sysTopics.slice(0, 20));
          }, listenDuration);
        });
      });

      client.on('message', (topic, payload) => {
        const existing = discoveredTopics.get(topic);
        if (existing) {
          existing.messageCount++;
          existing.lastPayload = payload.toString('utf-8');
        } else {
          discoveredTopics.set(topic, {
            messageCount: 1,
            lastPayload: payload.toString('utf-8'),
            firstSeen: Date.now(),
          });
        }
      });

      client.on('error', (err) => {
        clearTimeout(timeout);
        client.end(true);
        reject(normalizeError(err, 'mqtt'));
      });
    });
  }

  protected async doHealthCheck(
    params: Record<string, unknown>,
    auth?: Record<string, unknown>
  ): Promise<Omit<HealthCheckResult, 'latencyMs' | 'checkedAt'>> {
    const testResult = await this.doTestConnection(params, auth);
    return {
      status: testResult.success ? 'healthy' : 'unhealthy',
      message: testResult.message,
      metrics: {
        ...testResult.details,
        protocolType: 'mqtt',
      },
    };
  }
}
